# CODEJAM

./: README.md  package-lock.json  pyproject.toml
backend/: .env  pyproject.toml
backend/instruct_ai/: main.py
backend/instruct_ai/saved_index/: index_store.json
backend/instruct_ai/utils/: pipeline.py  schema.py
instruct-ai-frontend/: package-lock.json  package.json
instruct-ai-frontend/app/: layout.tsx  page.tsx
instruct-ai-frontend/app/assessment/: page.tsx
instruct-ai-frontend/app/coding/: page.tsx
instruct-ai-frontend/app/login/: page.tsx
instruct-ai-frontend/app/register/: page.tsx
instruct-ai-frontend/components/: background-beams.tsx  footer.tsx  navbar.tsx
